Align fixes.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,6 +49,7 @@
 
     background: var(--background-primary);
     color: var(--text-normal);
+    font-family: sans-serif;
     
 }
 
@@ -84,19 +85,22 @@
     --scrollbar-thin-track: transparent;
 }
 
-:root header {
-    color: var(--interactive-active);
+head.h1 {
+    width: 100%;
+    background: var(--header-primary);
+    text-align: center;   
+    padding: 30px;
 }
 
 :root a {
     color:            var(--interactive-normal);
     background: transparent;
     transition:       var(--active-transition);
+    text-decoration: none;
     }
 :root a:hover {
     color:            var(--interactive-hover);
     background-color: var(--background-modifier-hover);
-    border: solid 2px blue;
     transition:       var(--active-transition);
     }
 :root a:active {
@@ -108,6 +112,7 @@
 }
 
 :root .main_section {
+    max-width: 33%;
     border: none;    
     border-radius:    var(--border-radius);
     background-color: var(--background-tertiary);
@@ -116,7 +121,7 @@
 }
 
 .main_section .header {
-    background-color: var(--header-primary);
+    background-color: var(--text-normal);
     text-decoration: underline;
     padding: 10px;
     }
